--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,13 @@
             </a>
        </div>
        <div class="blogs">
+           <div class="card">
+               <div class="container">
+                   <% blogs.forEach((blog) => { %>
+                   <%= blog.title %>
+                   <% }) %>
+               </div>
+           </div>
        </div>
     </body>
 </html>
