--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -6,12 +6,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
 
-        <link rel="stylesheet" href="css/card.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/nav.css">
-        <link rel="stylesheet" href="css/blogs.css">
-
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="/css/card.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/nav.css">
+        <link rel="stylesheet" href="/css/blogs.css">
+        <link rel="stylesheet" href="/css/blog.css">
     </head>
     <body>
         <div class="nav">
@@ -31,14 +30,16 @@
                 </div>
             </a>
        </div>
-       <div class="blogs">
-           <% for (i = 0; i < blogs.length; i++) { %>
-               <a href="/blog/<%= i %>">
-                   <div class="card container">
-                       <%= blogs[i].title.slice(0, 30) %>
-                   </div>
-               </a>
-           <% } %>
+       <div class="blog card">
+           <div class="container">
+               <div style="font-size: 25px">
+                   <%= blog.title %> (<%= blog.date %>)
+               </div>
+               <br>
+               <div>
+                   <%= blog.body %>
+               </div>
+           </div>
        </div>
     </body>
 </html>
