--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -19,6 +19,11 @@
                     &#x1F44B; Jack's Blog
                 </div>
             </a>
+            <a href="/portfolio" id="portfolio" class="portfolio">
+                <div class="card container">
+                    Portfolio
+                </div>
+            </a>
             <a href="/about" id="about" class="about">
                 <div class="card container">
                     About
