--- a/static/css/blogs.css
+++ b/static/css/blogs.css
@@ -1,7 +1,7 @@
 .blogs {
     font-size: 25px;
     margin-top: 2%;
-    width: 50%;
+    width: 60%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -16,5 +16,17 @@
         margin-top: 2%;
         margin-left: auto;
         margin-right: auto;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .blogs {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 410px) {
+    .blogs {
+        font-size: 20px;
     }
 }
