modularized nav bar

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,39 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-        <meta charset="UTF-8">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
 
-        <link rel="stylesheet" href="css/card.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/nav.css">
-        <link rel="stylesheet" href="css/blogs.css">
+    <link rel="stylesheet" href="css/card.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/blogs.css">
 
-        <script src="script.js"></script>
-    </head>
-    <body>
-        <div class="nav">
-            <a href="/" id="title" class="title">
-                <div class="card container">
-                    &#x1F44B; Jack's Blog
-                </div>
-            </a>
-            <a href="/portfolio" id="portfolio" class="portfolio">
-                <div class="card container">
-                    Portfolio
-                </div>
-            </a>
-            <a href="/about" id="about" class="about">
-                <div class="card container">
-                    About
-                </div>
-            </a>
-            <a href="/contact" id="contact" class="contact">
-                <div class="card container">
-                    Contact
-                </div>
-            </a>
-       </div>
+    <script src="script.js"></script>
+</head>
+<body>
+    <%- include('nav') %>
+</body>
 </html>
