--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,9 +18,9 @@
     <div class="blogs">
         <% for (i = 0; i < blogs.length; i++) { %>
             <a href="/blog/<%= i %>">
-                <div class="card container">
-                    <%= blogs[i].title.slice(0, 30) %> (<%= blogs[i].date %>)
-                </div>
+                <div class="card container" style="text-align: left">
+                    <%= blogs[i].title.slice(0, 30) %>
+                    (<%= blogs[i].date %>)
             </a>
         <% } %>
     </div>
