--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
                 <div class="card container" style="text-align: left">
                     <%= blogs[i].title.slice(0, 30) %>
                     (<%= blogs[i].date %>)
+                </div>
             </a>
         <% } %>
     </div>
