--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 <body>
     <%- include('nav') %>
     <div class="blogs">
-        <% for (i = 0; i < blogs.length; i++) { %>
+        <% for (i = blogs.length; i > 0; i--) { %>
             <a href="/blog/<%= i %>">
                 <div class="card container" style="margin-top: 2%; text-align: left">
                     <%= blogs[i].title.slice(0, 30) %>
