--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,11 +17,11 @@
 <body>
     <%- include('nav') %>
     <div class="blogs">
-        <% for (i = blogs.length - 1; i >= 0 ; i--) { %>
+        <% for (i = 0; i < blogs.length; i++) { %>
             <a href="/blog/<%= i %>">
                 <div class="card container" style="margin-top: 2%; text-align: left">
                     <%= blogs[i].title.slice(0, 30) %>
-                    (<%= blogs[i].date %>)
+                    (<%= blogs[i].date.toDateString() %>)
                 </div>
             </a>
         <% } %>
