--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -18,7 +18,7 @@
         <div style="padding: 5px 20px;">
             <%- blog.content %>
         </div>
-        <% blog.date.toDateString() %>
+        <%= blog.date.toDateString() %>
     </div>
 </body>
 </html>
