--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -15,7 +15,7 @@
 <body>
     <%- include('nav') %>
     <div class="blog card">
-        <div style="padding: 5px 20px;">
+        <div style="padding: 20px; padding-top: 5px;">
             <%- blog.content %>
             <br>
             <%= blog.date.toDateString() %>
