--- a/static/css/blogs.css
+++ b/static/css/blogs.css
@@ -1,9 +1,17 @@
 .blogs {
     font-size: 25px;
-    margin-top: 2%;
     width: 60%;
     margin-right: auto;
     margin-left: auto;
+}
+
+.blog-title {
+    margin-top: 25px;
+    font-size: 25px;
+    color: #2e3440;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .blogs .card {
@@ -12,7 +20,7 @@
 
 @media screen and (max-width: 800px) {
     .blogs {
-        width: 90%;
+        width: 80%;
         margin-top: 2%;
         margin-left: auto;
         margin-right: auto;
