ADD ABOUT SECTION

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,10 +10,22 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/blogs.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="/css/container.css">
 
     <script src="script.js"></script>
 </head>
 <body>
     <%- include('nav') %>
+    <div class="about card">
+        <div class="content-container">
+            <h1>About</h1>
+                <p>
+                    Hi, my name is Jack Davidson and I am a programmer in Austin, Texas. I enjoy computer
+                    science & mathematics. I have a strong passion for learning and I am a strong proponent
+                    of the growth mindset.
+                </p>
+        </div>
+    </div>
 </body>
 </html>
