--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,20 +1,20 @@
 <div class="nav">
-    <a href="/" id="title" class="title">
+    <a href="/" class="nav-title">
         <div class="card container">
-            &#x1F44B; Jack's Blog
+            &#x1F44B; jackdavidson.tech
         </div>
     </a>
-    <a href="/portfolio" id="portfolio" class="portfolio">
+    <a href="/portfolio" class="nav-portfolio">
         <div class="card container">
             Portfolio
         </div>
     </a>
-    <a href="/about" id="about" class="about">
+    <a href="/about" class="nav-about">
         <div class="card container">
             About
         </div>
     </a>
-    <a href="/contact" id="contact" class="contact">
+    <a href="/contact" class="nav-contact">
         <div class="card container">
             Contact
         </div>
