--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/blogs.css">
+    <link rel="stylesheet" href="/css/container.css">
 
     <script src="script.js"></script>
 </head>
