--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
         <% for (i = blogs.length - 1; i >= 0; i--) { %>
             <a href="/blog/<%= i %>">
                 <div class="card container" style="margin-top: 2%; text-align: left">
-                    <%= blogs[i].title.slice(0, 30) %>
+                    <%= blogs[i].title.slice %>
                 </div>
             </a>
         <% } %>
