--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <div class="blogs">
         <% for (i = blogs.length - 1; i >= 0; i--) { %>
             <a href="/blog/<%= i %>">
-                <div class="card container" style="margin-top: 2%; text-align: left">
+                <div class="card container" style="margin-top: 10px; text-align: left">
                     <%= blogs[i].title %>
                 </div>
             </a>
