--- a/templates/contact.ejs
+++ b/templates/contact.ejs
@@ -11,9 +11,20 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/blogs.css">
     <link rel="stylesheet" href="/css/container.css">
+    <link rel="stylesheet" href="/css/contact.css">
 
 </head>
 <body>
     <%- include('nav') %>
+    <div class="card contact">
+        <div class="content-container">
+            <h1>Contact</h1>
+            <b>mail</b>: <%= email %>
+            <br>
+            <b>discord</b>: <%= discord %>
+            <br>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
