--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,5 +1,5 @@
 .card {
-    color: #8FBCBB;
+    color: #2e3440;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 10px;
     margin: 5px;
