added portfolio section

--- a/templates/portfolio.ejs
+++ b/templates/portfolio.ejs
@@ -11,9 +11,16 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/blogs.css">
     <link rel="stylesheet" href="/css/container.css">
+    <link rel="stylesheet" href="/css/portfolio.css">
 
 </head>
 <body>
     <%- include('nav') %>
+    <div class="card portfolio">
+        <div class="content-container">
+            <h1>This section is under construction</h1>
+            <p>Coming soon.</p>
+        </div>
+    </div>
 </body>
 </html>
