--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
 
+    <title>Jack Davidson :: Home</title>
     <link rel="stylesheet" href="/css/card.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/nav.css">
