--- a/templates/portfolio.ejs
+++ b/templates/portfolio.ejs
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/blogs.css">
-    <link rel="stylesheet" href="/css/container.css">
-    <link rel="stylesheet" href="/css/portfolio.css">
+    <link rel="stylesheet" href="css/container.css">
+    <link rel="stylesheet" href="css/portfolio.css">
 
 </head>
 <body>
