--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -1,3 +1,5 @@
+@import var("main.css");
+
 .blogs {
     font-size: 25px;
     width: 60%;
@@ -8,14 +10,9 @@
 .blog-title {
     margin-top: 25px;
     font-size: 25px;
-    color: #2e3440;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-}
-
-.blogs .card {
-    color: #2E3440
 }
 
 @media screen and (max-width: 800px) {
