--- a/public/css/card.css
+++ b/public/css/card.css
@@ -2,7 +2,7 @@
 
 .card {
     color: var(--fg);
-    background-color: var(--bg);
+    background-color: var(--bg1);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 10px;
     margin: 5px;
