added update to templates

--- a/templates/nav.ejs
+++ b/templates/nav.ejs
@@ -1,7 +1,7 @@
 <div class="nav">
     <a href="/" class="nav-title">
         <div class="card container">
-            &#x1F44B; jackdavidson.tech
+            jackdavidson.tech
         </div>
     </a>
     <a href="/portfolio" class="nav-portfolio">
