--- a/templates/contact.ejs
+++ b/templates/contact.ejs
@@ -23,6 +23,7 @@
             <br>
             <b>discord</b>: <%= discord %>
             <br>
+            <b>linkedin</b>: <a href="<%= linkedin %>">jackmdavidson</a>
             </div>
         </div>
     </div>
