--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -22,7 +22,7 @@
     </div>
     <div class="blogs">
         <% for (i = blogs.length - 1; i >= 0; i--) { %>
-            <a href="/blog/<%= blogs[i].title.replace(/(<([^>]+)>)/, '').replace(/ /g, '_') %>">
+            <a href="/blog/<%- escape(blogs[i].title.replace(/(<([^>]+)>)/, '').replace(/ /g, '_')) %>">
                 <div class="card container" style="margin-top: 10px; text-align: left">
                     <%- blogs[i].title %>
                 </div>
