--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -7,6 +7,9 @@
     <meta charset="UTF-8">
 
     <title>Jack Davidson :: Home</title>
+    <meta name="description" content="Jack Davidson's Blog and Personal Website">
+    <meta name="keywords" content="Programming, Coding, Javascript, Python, C++, C, blog">
+    <meta name="author" content="Jack Davidson">
     <link rel="stylesheet" href="/css/card.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/nav.css">
