--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -7,6 +7,10 @@
     margin-top: 2%;
 }
 
+.blog img {
+    width: 100%;
+}
+
 @media screen and (max-width: 800px) {
     .blog {
         width: 90%;
