--- a/templates/blog.ejs
+++ b/templates/blog.ejs
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Jack Davidson :: <%- blog.title.replace(/<[^>]*>/, '') %></title>
-    <meta name="description" content="<%- blog.content.replace(/<[^>]*>/, '').slice(50) + '...' %>"
+    <meta name="description" content="<%- blog.content.replace(/<[^>]*>/, '') %>"
 
     <link rel="stylesheet" href="/css/card.css">
     <link rel="stylesheet" href="/css/main.css">
