added link to resume

--- a/templates/nav.ejs
+++ b/templates/nav.ejs
@@ -4,9 +4,9 @@
             &#x1F44B; jackdavidson.tech
         </div>
     </a>
-    <a href="/portfolio" class="nav-portfolio">
+    <a href="/resume" class="nav-resume">
         <div class="card container">
-            Portfolio
+            Resume
         </div>
     </a>
     <a href="/about" class="nav-about">
