--- a/templates/blog.ejs
+++ b/templates/blog.ejs
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Jack Davidson :: <%- blog.title.replace(/<[^>]*>/, '') %></title>
     <meta name="description" content="<%= blog.content %>">
