changed fonts for code blocks

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,7 +31,7 @@ pre {
 }
 
 code {
-    font-family: 'Source Code Pro', sans-serif;
+    font-family: 'Roboto Mono', sans-serif;
     font-size: 90%;
     background-color: var(--bg);
     border-radius: 5px;
